--- a/index.html
+++ b/index.html
@@ -1,185 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>White Mountains</title>
+      <title>ELUNIA</title>
       <meta charset="utf-8">
       <!-- link to the external CSS file for font awesome icon library -->
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-      <style>
-         * {
-         box-sizing: border-box;
-         margin-top: 0px;
-         }
-         body {
-         color: #878787;
-         margin: 0;
-         font-family: sans-serif;
-         text-align: center;
-         }
-         img {
-         max-width: 100%;
-         }
-         a {
-         text-decoration: none;
-         }
-         .nav-header {
-         background: #f0f5f5;
-         height: 100px;
-         display: flex;
-         }
-         .nav-div {
-         margin: auto;
-         }
-         .logo-img {
-         width: 120px;
-         margin-left: 20px;
-         }
-         .search-icon {
-         margin: 30px;
-         }
-         .nav-bar {
-         list-style-type: none;
-         display: flex;
-         padding-top: 15px;
-         }
-         .nav-bar-link {
-         color: #878787;
-         font-size: 24px;
-         padding: 20px;
-         }
-         .main-header {
-         background: url("imgs/whitemountain2.jpg") top;
-         background-size: cover;
-         padding-top: 20px;
-         height: 300px;
-         }
-         .main-header-title {
-         text-align: left;
-         font-size: 2.5em;
-         color: #f7f8f9;
-         text-transform: uppercase;
-         font-weight: normal;
-         padding-left: 75px;
-         text-shadow: 2px 2px 5px darkgrey;
-         }
-         .main-header-intro {
-         line-height: 1.5em;
-         width: 50%;
-         margin: auto;
-         padding: 40px;
-         color: #333333;
-         text-align: justify;
-         }
-         .intro {
-         width: 60%;
-         margin: auto;
-         }
-         .button {
-         display: block;
-         background-color: #9dcc51;
-         width: 110px;
-         height: 40px;
-         margin-left: 500px;
-         color: white;
-         padding-top: 10px;
-         box-shadow: 2px 2px 2px grey;
-         }
-         .box {
-         width: 80%;
-         margin: auto;
-         display: flex;
-         }
-         .card {
-         width: 100%;
-         padding: 20px;
-         text-align: left;
-         background: #e6eced;
-         margin: 20px;
-         border: 1px solid black;
-         border-radius: 5px 5px 5px 5px;
-         box-shadow: 5px 5px 5px grey;
-         }
-         .footer {
-         height: 40px;
-         background: #f0f5f5;
-         padding: 5px;
-         }
-         .experience {
-         padding-top: 20px;
-         }
-      </style>
+      <link rel="stylesheet" type="text/css" href="homepage.css">
    </head>
    <body>
-      <div class="nav-header">
-         <img class="logo-img" src="imgs/visit-white-mountains-logo.png" alt="Visit White Mountains logo">
-         <div class="nav-div">
-            <ul class="nav-bar">
-               <li><a class="nav-bar-link" href="#">Home</a></li>
-               <li><a class="nav-bar-link" href="#">Explore More</a></li>
-               <li><a class="nav-bar-link" href="#">Contact Us</a></li>
-            </ul>
+      <div class="nav-background">
+         <div class="nav-container">
+            <div class="nav-div">
+               <h1 class="main-header-title"><a href="index.html">ELUNIA</a></h1>
+            </div>
+            <div class="nav-div">
+               <ul class="nav-bar">
+                  <li><a class="nav-bar-link" href="#">PRESSURE POINTS</a></li>
+                  <li><a class="nav-bar-link" href="#">SOAK</a></li>
+                  <li><a class="nav-bar-link" href="borderlines.html">BORDERLINES</a></li>
+                  <li><a class="nav-bar-link" href="#">CONTACT</a></li>
+               </ul>
+            </div>
          </div>
-         <div class="search-icon">
-            <i class="fas fa-search fa-2x"></i>
-         </div>
+            <div class="listen-now">
+            	<a type="button" href="https://elunia.ffm.to/soak" value="soak" target="_blank" class="listen-button">LISTEN TO SOAK NOW</a>
+      		</div>
       </div>
-      <div class="main-header">
-         <h1 class="main-header-title">White Mountains</h1>
-         <div class="main-header-intro">
-            White Mountains region is one of the most breathtaking attractions located in New Hampshire. It is home to a large number of hiking trails and ski areas with spectacular sceneary!
-         </div>
-      </div>
-      <h2 class="experience">Experience winter in bold new ways!</h2>
       <div class="intro">
-         <p> Whether you dream of conquering fresh powder, riding a new trail, or making unforgettable memories with your family, you can do it all and more in New Hampshire. Plan your winter getaway.
+         <p> When reality became too much, ELUNIA created an alternative existence. A singer-songwriter-producer executing all of her own visuals, the New Hampshire-based recording artist captures the endless meaning of human interaction as an immersive experience. Each track delves beneath the surface, with striking electronic textures, soaring melodies, and observant, probing lyrics.
          </p>
-         <a href="http://www.google.com" class="button"> Explore </a>
-      </div>
-      <div class="box">
-         <div class="card">
-            <img src="imgs/resort.jpg" alt="Resort">
-            <h3>Where to Stay</h3>
-            <p>
-               The White Mountains of New Hampshire has a wealth of accomodations to suit every need and taste. Everything from Grand Resorts to quiet campgrounds in the midst of our beautiful natrual beauty.
-            </p>
-            <ul>
-               <li><a href="#">Lodging</a></li>
-               <li><a href="#">Camping</a></li>
-               <li><a href="#">Real Estate</a></li>
-            </ul>
-         </div>
-         <!-- End of class .card -->
-         <div class="card">
-            <img src="imgs/mountain.jpg" alt="Mountain">
-            <h3>What to bring</h3>
-            <p>
-               One of most important things when it comes to hiking in the great outdoors is packing accordingly. Here are a few tips:
-            </p>
-            <ol>
-               <li>Bring layers of clothing</li>
-               <li>Pack sunscreen and bug spray</li>
-               <li>Carry extra water just in case</li>
-               <li>Pack light</li>
-            </ol>
-         </div>
-         <!-- End of class .card -->
-         <div class="card">
-            <img src="imgs/food.jpg" alt="Mountain">
-            <h3>Where to eat</h3>
-            <p>
-               The white mountain region has a wide variety of eataries. All offering their own unique taste!
-            </p>
-            <ul>
-               <li>Peach's Restaurant</li>
-               <li>Muddy Moose Restaurant and Pub</li>
-               <li>Abenaki Trail Restaurant and Pub</li>
-            </ul>
-         </div>
-         <!-- End of class .card -->
-      </div>
-      <!-- End of class .box -->
-      <div>
-         <iframe width="560" height="315" src="https://www.youtube.com/embed/8anbXgi2xXU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <p> Although trained in music from an early age, it was the discovery of transforming feelings into creative entities that inspired the emerging songsmith to chart a different path. The multi-instrumentalist began writing and producing incessantly, hiding away in school practice rooms as a coping mechanism for the isolation she faced in the world around her. Fragments of thought noted in the midst of heart-wrenching moments evolved into ethereal, liquid atmospheres. Co-producing with multi-million streamed producer JMAC (Haux, Luz, Matilda Mann, Rosie Carney), the result is a flood of wild self-expression channeled through cinematic soundscapes.
+         </p>
+         <p>
+         ELUNIA’s sophomore anthem “Soak,” with its lush, crystalline palette, evokes a post-concert euphoria after a lifelong struggle with mental health. The single was met with high praise, described by CLOUT as “the definition of a banger” and EARMILK as “[leaving] you hanging off each word.”
+         </p>
       </div>
       <div class="footer">
          <i class="fab fa-facebook-square fa-2x"></i>
