--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <title>ELUNIA</title>
       <meta charset="utf-8">
       <!-- link to the external CSS file for font awesome icon library -->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
       <link rel="stylesheet" type="text/css" href="homepage.css">
    </head>
