--- a/borderlines.html
+++ b/borderlines.html
@@ -4,6 +4,7 @@
       <title>ELUNIA | Borderlines</title>
       <meta charset="utf-8">
       <!-- link to the external CSS file for font awesome icon library -->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
       <link rel="stylesheet" type="text/css" href="borderlines.css">
    </head>
@@ -18,7 +19,7 @@
                <ul class="nav-bar">
                   <li><a class="nav-bar-link" href="#">PRESSURE POINTS</a></li>
                   <li><a class="nav-bar-link" href="#">SOAK</a></li>
-                  <li><a class="nav-bar-link" href="#">BORDERLINES</a></li>
+                  <li><a class="nav-bar-link" href="borderlines.html">BORDERLINES</a></li>
                   <li><a class="nav-bar-link" href="#">CONTACT</a></li>
                </ul>
             </div>
@@ -34,20 +35,18 @@
       <div>
          <p class="quote"> "I'M ALIVE BUT I DON'T FIT INTO REALITY." </p>
       </div>
-            <div class="box">
+      <div class="box">
       <div class="card">
             <p class="description">
                Late at night in July of 2017, "Borderlines" came to life. Here's a voice memo of my initial idea. I was playing around with presets on my keyboard and I felt really inspired by this atmosphere. The melody flowed out easily, like it had always been in my head and I was just waiting for the right moment to pull it out.
             </p>
          </div>
          <div class="card">
-         <iframe class="soundcloud" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1017641128%3Fsecret_token%3Ds-8bROSqOLfuH&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
+         <iframe class="soundcloud" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1017641128%3Fsecret_token%3Ds-8bROSqOLfuH&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
          </div>
       </div>
-      <hr>
-      <div>
-         <iframe width="1000" height="562.5" src="https://www.youtube.com/embed/W5J--sxvO2E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
+      <hr class="video-line">
+         <iframe class="video" width="1000" height="562.5" src="https://www.youtube.com/embed/W5J--sxvO2E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <div class="about">
          <p> I created “Borderlines” and its visual around the concept of duality – how mental illness isn’t a definite label, but a fluctuating state of being. I found myself torn between two sides of my personality while struggling with anxiety; a right vs. left brain complex where one side of me was trying so hard to conform while the other side was begging for uninhibited self-expression. The truest part of me wanted to experience the world in full color, even if it was through a lens of introversion that others wouldn’t understand. Eventually, I realized that it was the people around me who were missing out, not the other way around.
          </p>
