--- a/borderlines.html
+++ b/borderlines.html
@@ -16,10 +16,9 @@
             </div>
             <div class="nav-div">
                <ul class="nav-bar">
-                  <li><a class="nav-bar-link" href="#">PRESSURE POINTS</a></li>
-                  <li><a class="nav-bar-link" href="#">SOAK</a></li>
+                  <li><a class="nav-bar-link" href="pressure-points.html">PRESSURE POINTS</a></li>
+                  <li><a class="nav-bar-link" href="soak.html">SOAK</a></li>
                   <li><a class="nav-bar-link" href="borderlines.html">BORDERLINES</a></li>
-                  <li><a class="nav-bar-link" href="#">CONTACT</a></li>
                </ul>
             </div>
          </div>
@@ -27,8 +26,8 @@
       <div>
          <img class="top-image" src="imgs/elunia-2.jpg" alt="Borderlines">
       </div>
-      <div>
-         <iframe class="spotify" src="https://open.spotify.com/embed/track/6xSSCTxJR3fQt5ATApWBNN" width="600" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+      <div class="listen-now">
+         <a type="button" href="https://elunia.ffm.to/borderlines" value="borderlines" target="_blank" class="listen-button">LISTEN TO BORDERLINES NOW</a>
       </div>
       <hr>
       <div>
@@ -53,12 +52,35 @@
       <div>
          <img class="borderlines-lyrics" src="imgs/borderlines-lyrics.jpg" alt="Borderlines">
       </div>
+            <div class="mailing-list">
+         <!-- Begin Mailchimp Signup Form -->
+         <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+         <div id="mc_embed_signup">
+            <form action="https://eepurl.us1.list-manage.com/subscribe/post?u=7dbea7ea9f81d0ad86a360d0e&amp;id=4953f21313" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+               <div id="mc_embed_signup_scroll">
+                  <label for="mce-EMAIL">CONNECT</label>
+                  <div id="hidden-input" aria-hidden="true">
+                     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                     <input type="text" name="b_7dbea7ea9f81d0ad86a360d0e_4953f21313" tabindex="-1" value="">
+                  </div>
+                  <div class="email-input">
+                     <input type="email" value="" name="EMAIL" class="email" id="email" placeholder="email address" required>
+                     <input type="submit" value="SUBSCRIBE" name="subscribe" id="subscribe" class="subscribe-button">
+                  </div>
+                </div>
+            </form>
+         </div>
+      <!--End mc_embed_signup-->
+      </div>
       <div class="footer">
-         <i class="fab fa-facebook-square fa-2x"></i>
-         <i class="fab fa-twitter-square fa-2x"></i>
-         <i class="fab fa-flickr fa-2x"></i>
-         <i class="fab fa-youtube-square fa-2x"></i>
-         <i class="fas fa-share-alt-square fa-2x"></i>
+         <a href="https://open.spotify.com/artist/0yGiXVaS4iPIIoSIo4gzTF" value="spotify" target="_blank"><i class="fab fa-spotify fa-lg"></i></a>
+         <a href="https://instagram.com/eluniamusic" value="instagram" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
+         <a href="https://twitter.com/eluniamusic" value="twitter" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
+         <a href="https://www.youtube.com/channel/UCoHTQgb0bT9FicC3XdcoM4A" value="youtube" target="_blank"><i class="fab fa-youtube fa-lg"></i></a>
+         <a href="https://www.tiktok.com/@eluniamusic" value="tiktok" target="_blank"><i class="fab fa-tiktok fa-lg"></i></a>
+         <a href="https://www.facebook.com/eluniamusic" value="facebook" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
+         <a href="https://www.soundcloud.com/eluniamusic" value="soundcloud" target="_blank"><i class="fab fa-soundcloud fa-lg"></i></a>
+         <a href="https://eluniamusic.bandcamp.com" value="bandcamp" target="_blank"><i class="fab fa-bandcamp fa-lg"></i></a>
       </div>
    </body>
 </html>
