--- a/soak.html
+++ b/soak.html
@@ -27,7 +27,9 @@
          <img class="top-image" src="imgs/elunia-3.jpg" alt="Soak">
       </div>
       <div class="listen-now">
-         <a type="button" href="https://elunia.ffm.to/soak" value="soak" target="_blank" class="listen-button">LISTEN TO SOAK NOW</a>
+         <form action="https://elunia.ffm.to/soak" target="_blank">
+            <input type="submit" class="listen-button" value="LISTEN TO SOAK NOW" />
+         </form>
       </div>
       <hr>
       <div>
@@ -40,7 +42,7 @@
             </p>
          </div>
          <div class="card">
-            <iframe class="soundcloud" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1027156873%3Fsecret_token%3Ds-UlhDdjcCe6n&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+            <iframe class="soundcloud" width="480" height="300" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1027156873%3Fsecret_token%3Ds-UlhDdjcCe6n&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
          </div>
       </div>
       <hr class="second-line">
@@ -49,7 +51,7 @@
          </p>
       </div>
       <div>
-         <img class="borderlines-lyrics" src="imgs/borderlines-lyrics.jpg" alt="Borderlines">
+         <img class="lyrics" src="imgs/soak-lyrics.jpg" alt="Soak lyrics">
       </div>
       <div class="mailing-list">
          <!-- Begin Mailchimp Signup Form -->
@@ -57,7 +59,7 @@
          <div id="mc_embed_signup">
             <form action="https://eepurl.us1.list-manage.com/subscribe/post?u=7dbea7ea9f81d0ad86a360d0e&amp;id=4953f21313" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                <div id="mc_embed_signup_scroll">
-                  <label for="mce-EMAIL">CONNECT</label>
+                  <label for="email">CONNECT</label>
                   <div id="hidden-input" aria-hidden="true">
                      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                      <input type="text" name="b_7dbea7ea9f81d0ad86a360d0e_4953f21313" tabindex="-1" value="">
@@ -66,20 +68,20 @@
                      <input type="email" value="" name="EMAIL" class="email" id="email" placeholder="email address" required>
                      <input type="submit" value="SUBSCRIBE" name="subscribe" id="subscribe" class="subscribe-button">
                   </div>
-                </div>
+               </div>
             </form>
          </div>
-      <!--End mc_embed_signup-->
+         <!--End mc_embed_signup-->
       </div>
       <div class="footer">
-         <a href="https://open.spotify.com/artist/0yGiXVaS4iPIIoSIo4gzTF" value="spotify" target="_blank"><i class="fab fa-spotify fa-lg"></i></a>
-         <a href="https://instagram.com/eluniamusic" value="instagram" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
-         <a href="https://twitter.com/eluniamusic" value="twitter" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
-         <a href="https://www.youtube.com/channel/UCoHTQgb0bT9FicC3XdcoM4A" value="youtube" target="_blank"><i class="fab fa-youtube fa-lg"></i></a>
-         <a href="https://www.tiktok.com/@eluniamusic" value="tiktok" target="_blank"><i class="fab fa-tiktok fa-lg"></i></a>
-         <a href="https://www.facebook.com/eluniamusic" value="facebook" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
-         <a href="https://www.soundcloud.com/eluniamusic" value="soundcloud" target="_blank"><i class="fab fa-soundcloud fa-lg"></i></a>
-         <a href="https://eluniamusic.bandcamp.com" value="bandcamp" target="_blank"><i class="fab fa-bandcamp fa-lg"></i></a>
+         <a href="https://open.spotify.com/artist/0yGiXVaS4iPIIoSIo4gzTF" target="_blank"><i class="fab fa-spotify fa-lg"></i></a>
+         <a href="https://instagram.com/eluniamusic" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
+         <a href="https://twitter.com/eluniamusic" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
+         <a href="https://www.youtube.com/channel/UCoHTQgb0bT9FicC3XdcoM4A" target="_blank"><i class="fab fa-youtube fa-lg"></i></a>
+         <a href="https://www.tiktok.com/@eluniamusic" target="_blank"><i class="fab fa-tiktok fa-lg"></i></a>
+         <a href="https://www.facebook.com/eluniamusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
+         <a href="https://www.soundcloud.com/eluniamusic" target="_blank"><i class="fab fa-soundcloud fa-lg"></i></a>
+         <a href="https://eluniamusic.bandcamp.com" target="_blank"><i class="fab fa-bandcamp fa-lg"></i></a>
       </div>
    </body>
 </html>
