--- a/borderlines.html
+++ b/borderlines.html
@@ -27,7 +27,9 @@
          <img class="top-image" src="imgs/elunia-2.jpg" alt="Borderlines">
       </div>
       <div class="listen-now">
-         <a type="button" href="https://elunia.ffm.to/borderlines" value="borderlines" target="_blank" class="listen-button">LISTEN TO BORDERLINES NOW</a>
+         <form action="https://elunia.ffm.to/borderlines" target="_blank">
+            <input type="submit" class="listen-button" value="LISTEN TO BORDERLINES NOW" />
+         </form>
       </div>
       <hr>
       <div>
@@ -40,25 +42,25 @@
             </p>
          </div>
          <div class="card">
-            <iframe class="soundcloud" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1017641128%3Fsecret_token%3Ds-8bROSqOLfuH&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+            <iframe class="soundcloud" width="480" height="300" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1017641128%3Fsecret_token%3Ds-8bROSqOLfuH&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
          </div>
       </div>
       <hr class="video-line">
-      <iframe class="video" width="1000" height="562.5" src="https://www.youtube.com/embed/W5J--sxvO2E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="video" width="1000" height="562" src="https://www.youtube.com/embed/W5J--sxvO2E" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <div class="about">
          <p> I created “Borderlines” and its visual around the concept of duality – how mental illness isn’t a definite label, but a fluctuating state of being. I found myself torn between two sides of my personality while struggling with anxiety; a right vs. left brain complex where one side of me was trying so hard to conform while the other side was begging for uninhibited self-expression. The truest part of me wanted to experience the world in full color, even if it was through a lens of introversion that others wouldn’t understand. Eventually, I realized that it was the people around me who were missing out, not the other way around.
          </p>
       </div>
       <div>
-         <img class="borderlines-lyrics" src="imgs/borderlines-lyrics.jpg" alt="Borderlines">
+         <img class="lyrics" src="imgs/borderlines-lyrics.jpg" alt="Borderlines lyrics">
       </div>
-            <div class="mailing-list">
+      <div class="mailing-list">
          <!-- Begin Mailchimp Signup Form -->
          <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
          <div id="mc_embed_signup">
             <form action="https://eepurl.us1.list-manage.com/subscribe/post?u=7dbea7ea9f81d0ad86a360d0e&amp;id=4953f21313" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                <div id="mc_embed_signup_scroll">
-                  <label for="mce-EMAIL">CONNECT</label>
+                  <label for="email">CONNECT</label>
                   <div id="hidden-input" aria-hidden="true">
                      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                      <input type="text" name="b_7dbea7ea9f81d0ad86a360d0e_4953f21313" tabindex="-1" value="">
@@ -67,20 +69,20 @@
                      <input type="email" value="" name="EMAIL" class="email" id="email" placeholder="email address" required>
                      <input type="submit" value="SUBSCRIBE" name="subscribe" id="subscribe" class="subscribe-button">
                   </div>
-                </div>
+               </div>
             </form>
          </div>
-      <!--End mc_embed_signup-->
+         <!--End mc_embed_signup-->
       </div>
       <div class="footer">
-         <a href="https://open.spotify.com/artist/0yGiXVaS4iPIIoSIo4gzTF" value="spotify" target="_blank"><i class="fab fa-spotify fa-lg"></i></a>
-         <a href="https://instagram.com/eluniamusic" value="instagram" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
-         <a href="https://twitter.com/eluniamusic" value="twitter" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
-         <a href="https://www.youtube.com/channel/UCoHTQgb0bT9FicC3XdcoM4A" value="youtube" target="_blank"><i class="fab fa-youtube fa-lg"></i></a>
-         <a href="https://www.tiktok.com/@eluniamusic" value="tiktok" target="_blank"><i class="fab fa-tiktok fa-lg"></i></a>
-         <a href="https://www.facebook.com/eluniamusic" value="facebook" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
-         <a href="https://www.soundcloud.com/eluniamusic" value="soundcloud" target="_blank"><i class="fab fa-soundcloud fa-lg"></i></a>
-         <a href="https://eluniamusic.bandcamp.com" value="bandcamp" target="_blank"><i class="fab fa-bandcamp fa-lg"></i></a>
+         <a href="https://open.spotify.com/artist/0yGiXVaS4iPIIoSIo4gzTF" target="_blank"><i class="fab fa-spotify fa-lg"></i></a>
+         <a href="https://instagram.com/eluniamusic" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
+         <a href="https://twitter.com/eluniamusic" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
+         <a href="https://www.youtube.com/channel/UCoHTQgb0bT9FicC3XdcoM4A" target="_blank"><i class="fab fa-youtube fa-lg"></i></a>
+         <a href="https://www.tiktok.com/@eluniamusic" target="_blank"><i class="fab fa-tiktok fa-lg"></i></a>
+         <a href="https://www.facebook.com/eluniamusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
+         <a href="https://www.soundcloud.com/eluniamusic" target="_blank"><i class="fab fa-soundcloud fa-lg"></i></a>
+         <a href="https://eluniamusic.bandcamp.com" target="_blank"><i class="fab fa-bandcamp fa-lg"></i></a>
       </div>
    </body>
 </html>
