--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <link rel="stylesheet" type="text/css" href="homepage.css">
    </head>
    <body>
+      <!-- Start Nav Bar -->
       <div class="nav-background">
          <div class="nav-container">
             <div class="nav-div">
@@ -16,18 +17,29 @@
             </div>
             <div class="nav-div">
                <ul class="nav-bar">
-                  <li><a class="nav-bar-link" href="pressure-points.html">PRESSURE POINTS</a></li>
-                  <li><a class="nav-bar-link" href="soak.html">SOAK</a></li>
-                  <li><a class="nav-bar-link" href="borderlines.html">BORDERLINES</a></li>
+                  <li class="contact-nav"><a class="nav-bar-link" href="#about">ABOUT</a></li>
+                  <li class="dropdown-link">
+                     <a class="nav-bar-link" href="#">DEEP END</a>
+                     <div class="dropdown-content">
+                        <a href="the-cycle.html">The Cycle</a>
+                        <a href="borderlines.html">Borderlines</a>
+                        <a href="tunnels.html">Tunnels</a>
+                        <a href="soak.html">Soak</a>
+                        <a href="pressure-points.html">Pressure Points</a>
+                     </div>
+                  </li>
+                  <li class="contact-nav"><a class="nav-bar-link" href="contact.html">CONTACT</a></li>
                </ul>
             </div>
          </div>
-         <div class="listen-now">
-            <form action="https://elunia.ffm.to/soak" target="_blank">
-               <input type="submit" class="listen-button" value="LISTEN TO SOAK NOW" />
-            </form>
-         </div>
       </div>
+      <!-- End Nav Bar -->
+      <div class="listen-now">
+         <form action="https://elunia.ffm.to/soak" target="_blank">
+            <input type="submit" class="listen-button" value="LISTEN TO SOAK NOW" />
+         </form>
+      </div>
+      <a id="about"></a>
       <div class="intro">
          <p> When reality became too much, ELUNIA created an alternative existence. A singer-songwriter-producer executing all of her own visuals, the New Hampshire-based recording artist captures the endless meaning of human interaction as an immersive experience. Each track delves beneath the surface, with striking electronic textures, soaring melodies, and observant, probing lyrics.
          </p>
@@ -62,7 +74,6 @@
          <a href="https://instagram.com/eluniamusic" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
          <a href="https://twitter.com/eluniamusic" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
          <a href="https://www.youtube.com/channel/UCoHTQgb0bT9FicC3XdcoM4A" target="_blank"><i class="fab fa-youtube fa-lg"></i></a>
-         <a href="https://www.tiktok.com/@eluniamusic" target="_blank"><i class="fab fa-tiktok fa-lg"></i></a>
          <a href="https://www.facebook.com/eluniamusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
          <a href="https://www.soundcloud.com/eluniamusic" target="_blank"><i class="fab fa-soundcloud fa-lg"></i></a>
          <a href="https://eluniamusic.bandcamp.com" target="_blank"><i class="fab fa-bandcamp fa-lg"></i></a>
