--- a/soak.html
+++ b/soak.html
@@ -9,6 +9,7 @@
       <link rel="stylesheet" type="text/css" href="soak.css">
    </head>
    <body>
+      <!-- Start Nav Bar -->
       <div class="nav-background">
          <div class="nav-container">
             <div class="nav-div">
@@ -16,13 +17,23 @@
             </div>
             <div class="nav-div">
                <ul class="nav-bar">
-                  <li><a class="nav-bar-link" href="pressure-points.html">PRESSURE POINTS</a></li>
-                  <li><a class="nav-bar-link" href="soak.html">SOAK</a></li>
-                  <li><a class="nav-bar-link" href="borderlines.html">BORDERLINES</a></li>
+                  <li class="contact-nav"><a class="nav-bar-link" href="index.html#about">ABOUT</a></li>
+                  <li class="dropdown-link">
+                     <a class="nav-bar-link" href="#">DEEP END</a>
+                     <div class="dropdown-content">
+                        <a href="the-cycle.html">The Cycle</a>
+                        <a href="borderlines.html">Borderlines</a>
+                        <a href="tunnels.html">Tunnels</a>
+                        <a href="soak.html">Soak</a>
+                        <a href="pressure-points.html">Pressure Points</a>
+                     </div>
+                  </li>
+                  <li class="contact-nav"><a class="nav-bar-link" href="contact.html">CONTACT</a></li>
                </ul>
             </div>
          </div>
       </div>
+      <!-- End Nav Bar -->
       <div>
          <img class="top-image" src="imgs/elunia-3.jpg" alt="Soak">
       </div>
@@ -78,7 +89,6 @@
          <a href="https://instagram.com/eluniamusic" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
          <a href="https://twitter.com/eluniamusic" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
          <a href="https://www.youtube.com/channel/UCoHTQgb0bT9FicC3XdcoM4A" target="_blank"><i class="fab fa-youtube fa-lg"></i></a>
-         <a href="https://www.tiktok.com/@eluniamusic" target="_blank"><i class="fab fa-tiktok fa-lg"></i></a>
          <a href="https://www.facebook.com/eluniamusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
          <a href="https://www.soundcloud.com/eluniamusic" target="_blank"><i class="fab fa-soundcloud fa-lg"></i></a>
          <a href="https://eluniamusic.bandcamp.com" target="_blank"><i class="fab fa-bandcamp fa-lg"></i></a>
