--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       </div>
       <!-- End Nav Bar -->
       <div class="listen-now">
-         <form action="https://elunia.ffm.to/soak" target="_blank">
-            <input type="submit" class="listen-button" value="LISTEN TO SOAK NOW" />
+         <form action="https://elunia.ffm.to/pressurepoints" target="_blank">
+            <input type="submit" class="listen-button" value="PRE-SAVE PRESSURE POINTS NOW" />
          </form>
       </div>
       <a id="about"></a>
